# mockup-studio

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
docs/superpowers/plans/: 2026-04-02-mockup-studio.md
docs/superpowers/specs/: 2026-04-02-mockup-studio-design.md
mcp-server/: Cargo.toml
mcp-server/src/: bridge.rs  main.rs  tools.rs
public/models/: ipad-pro.glb
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  websocket.rs
src-tauri/src/commands/: export.rs  file_io.rs  mod.rs
src/components/export/: ExportDialog.tsx
src/components/panels/: DevicePanel.tsx  LayerPanel.tsx  PropertyPanel.tsx  TopBar.tsx
src/components/timeline/: Timeline.tsx  TimelinePlayhead.tsx  TimelineTrack.tsx
src/components/viewport/: DeviceMesh.tsx  GltfDevice.tsx  ProceduralDevice.tsx  ScreenGizmo.tsx  ScreenTexture.tsx  Viewport.tsx
src/engine/: interpolator.ts  presets.ts
src/lib/: device-catalog.ts  procedural-geometry.ts
src/stores/: scene-store.ts
src/types/: scene.ts
tests/engine/: interpolator.test.ts
tests/lib/: device-catalog.test.ts  procedural-geometry.test.ts
tests/stores/: scene-store.test.ts
