[package]
name = "mockup-studio"
version = "0.1.0"
description = "A 3D device mockup promo video creator"
authors = ["you"]
edition = "2021"

[lib]
name = "mockup_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
